# mlp-neural-net

./: README.md  agent-instructions.md  main.py  pyproject.toml
artifacts/: leaderboard.csv  leaderboard.json
artifacts/runs/baseline/: config.json  history.json  model.pt  summary.json
artifacts/runs/baseline_02/: config.json  history.json  model.pt  summary.json
artifacts/runs/run_20260328_021837/: config.json
artifacts/runs/tune_adamw_bs128_ep35_pat6/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_adamw_bs128_wd5e4_ep35_pat6/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_adamw_bs128_wd5e4_ep35_pat6_seed7/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_adamw_bs128_wd5e4_ep35_pat6_thr052/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_adamw_lr3e4_wd1e4/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_adamw_lr5e4_wd1e4/: config.json
artifacts/runs/tune_adamw_lr5e4_wd1e4_02/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_adamw_thr048/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_adamw_thr052/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_adamw_wd5e4/: config.json  history.json  model.pt  summary.json
artifacts/runs/tune_thr045/: config.json
docs/data/: eda_report.md  preprocessed_data_report.md  preprocessing_steps.md
src/app/: __init__.py  cli.py  config.py  model.py  train.py  training.py
utils/data/: __init__.py  data_loader.py  preprocessing.py
(+18 files in other folders)
