[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlp-neural-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "ucimlrepo>=0.0.7",
]

[project.scripts]
adult-income-eda = "app.data.eda.generate_report:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
